dh-python (1.20130917-1) unstable; urgency=low

  * dh_python{2,3}: bump minimum required python{,3}:any version to
    workaround #723586

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 17 Sep 2013 19:29:05 +0200

dh-python (1.20130913-1) unstable; urgency=low

  [ Piotr Ożarowski ]
  * dh_py*:
    - add --requires option
    - do not generate "python2" dependency while guessing private
      extension's version using shebangs in other files (closes: #722307)

  [ Steve Langasek ]
  * Adjust dh_python to be multiarch-friendly (closes: 722045)

  [ B. Clausius ]
  * pybuild: fix --test when LC_ALL=C and setup.py contains non-ascii
    characters (closes: 722214)

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 13 Sep 2013 20:47:46 +0200

dh-python (1.20130903-1) unstable; urgency=low

  * dh_python2, dh_python3, dh_pypy:
    - do not rename extensions in directories that include architecture triplet
      as part of the path (closes: 721696)
    - add --no-ext-rename option

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 03 Sep 2013 20:20:43 +0200

dh-python (1.20130902-1) unstable; urgency=low

  * Fix DESTDIR guessing (from --name) for non-default interpreter versions
  * Add {package} to supported variables in command templates

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 02 Sep 2013 18:22:14 +0200

dh-python (1.20130901-1) unstable; urgency=low

  [ Dmitrijs Ledkovs ]
  * Fix pybuild.pm when PYBUILD_INTERPRETERS is set
    (broken in previous upload, closes: #720744)
  * Bump doctests s/3.2/3.3/

  [ Piotr Ożarowski ]
  * Add Barry Warsaw to co-maintainers
  * pybuild:
    - mention {version.major} and {version.minor} in pybuild's manpage
      (closes: 721068)
    - add --test-tox option (PYBUILD_TEST_TOX=1 works too, like with
      other pybuild options), closes: 721067
    - set https_proxy to 127.0.0.1 if it's not set (similar to http_proxy)
    - distutils build plugin: use default interpreter symlink in install step